<resources>
    <string name="app_name">Reminder Beta</string>
    <string name="search_title">Search</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="menu_item_notification">Notification</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_reference">Reference</string>

    <string name="tab_item_history">History</string>
    <string name="tab_item_ideas">Ideas</string>
    <string name="tab_item_todo">TODO</string>
    <string name="tab_item_birthdays">Birthdays</string>
</resources>
