<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionNotificationItem"
        android:icon="@mipmap/ic_message_text"
        android:orderInCategory="1"
        android:title="@string/menu_item_notification" />

    <item
        android:id="@+id/actionFavoritesItem"
        android:icon="@mipmap/ic_magnify"
        android:orderInCategory="2"
        android:title="@string/menu_item_favorites" />

    <item
        android:id="@+id/actionArchiveItem"
        android:icon="@mipmap/ic_magnify"
        android:orderInCategory="3"
        android:title="@string/menu_item_archive" />

    <item
        android:id="@+id/actionSettingsItem"
        android:icon="@mipmap/ic_magnify"
        android:orderInCategory="4"
        android:title="@string/menu_item_settings" />

    <item
        android:id="@+id/actionReferenceItem"
        android:icon="@mipmap/ic_magnify"
        android:orderInCategory="5"
        android:title="@string/menu_item_reference" />
</menu>